--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>Personnal intro</title>
-  <style>
-	table, th, td {
-  	border: 1px solid black;
-  	border-collapse: collapse;
-	text-align: center;
-	}
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+	<div class="container">
   	<h1>Ingrid FEIJT</h1>
     		<p><i>"Enthusiasts raise the world and doubtfull people let it down"</i> -Albert Guinon</p>
     		<img src="photo.jpg" alt="me"> 
     	<h2>-Imagination is the only weapon against Reality-</h2> 
-
-	<table style="width:50%">
+	</div>
+	
+	<table class="center">
   		<tr>
-    			<th>Birthday</th>
-  			<th>Favorite Color</th>
-    			<th>Favorite Food</th>
-			<th>Pinneapple on pizza</th>
+    			<th> Birthday </th>
+  			<th> Favorite Color </th>
+    			<th> Favorite Food </th>
+			<th> Pinneapple on pizza </th>
   		</tr>
   		<tr>
     			<td>03/03</td>
@@ -34,24 +30,25 @@
   		</tr>
 	</table> 
 
+	<div class="container">
 	<h3> Hobbies </h3>
-  	<ul>
-		<li>Photography</li>
-			<ul>
-  				<li>Fantasy</li>
-  				<li>Natural</li>
-  				<li>Pin-up</li>
-			</ul>
-  		<li>Stylism</li>
-  		<li>Draw</li>
-  		<li>Customize things</li>
+	</div>
+	<div class="container">
+		<div class="left"
   			<ul>
-				<li>Dolls</li>
-  				<li>Old furniture</li>
+				<li>Photography: Fantasy, Natural, Pin-up</li>
+					</ul>
+						<li>Stylism</li>
+						<li>Draw</li>
+						<li>Customize things: Doll, Old furniture</li>
+					</ul>
+						<li>Hiking</li>
+					</ul>
 			</ul>
-  		<li>Hiking</li>
-	</ul>
-
+		</div>
+	</div>
+	
+	<div class="container">
   	<h3>You can always count on me:</h3>
   		<p>When you need help if I'm able to do so <br>
  		If you need an advice</p>
@@ -64,7 +61,7 @@
   		<p>I run as fast as a boar</p>
 
 	<a href="https://github.com/Marmouz82/markdown-warmup-html"><< previous</a>|| Ingrid FEIJT || <a href="https://jonathanmaillard.github.io/markdown-to-html/index.html">>> next</a>
-	
+	</div>
 </body>
 
 </html>
